crates/strider-analyze/tests/snapshots/x86_kernel__elf_relocs__dispatch_via_table.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v7" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v7" [color="#888888", style=dashed];
  "v7" -> "6" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "6" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "6" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "6" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "5" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "13" -> "3" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "3" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "5" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "13" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x237c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "19" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "13" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "13" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x12fa:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "22" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "24" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "27" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="init\nEBX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "13" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x130f:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
